--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>ReQuest</title>
   </head>
-  <body>
+  <body style='font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;'>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
